# mader

./: .gitignore  .gitmodules  LICENSE  Readme.md  goal_fly  install_and_compile.sh  install_nlopt.sh  mader_fly  model.lp
faster/: .gitignore  CMakeLists.txt  FindGUROBI.cmake  a_star_tests.odt  cosas_para_el_paper.txt  my_model.txt  my_model2.txt  my_model_original_infeasible.txt  notas.odt  package.xml  plot_bspline_vs_minvo_control_effort.m  results.xlsx
faster/launch/: all.launch  astar.launch  everything.launch  faster.launch  faster_general.launch  faster_interface.launch  faster_sample.launch  faster_specific.launch  many_drones.launch  test_predictor.launch
faster/meshes/ConcreteDamage01b/: model.dae  model3.dae  model4.dae
faster/param/: faster.yaml
faster/rviz_cfgs/: astar.rviz  cvx.rviz  cvx_all.rviz
faster/scripts/: dynamic_forest.py  dynamic_obstacles.py  faster_commands.py  launch_many_drones.py  run_many_sims_single_agent.py
faster/src/: bspline_utils.cpp  bspline_utils.hpp  cgal_utils.cpp  cgal_utils.hpp  eigenmvn.hpp  faster.cpp  faster.hpp  faster_ros.cpp  faster_ros.hpp  faster_types.hpp  jps_manager.cpp  jps_manager.hpp  main.cpp  monteCarlotestSplineAStar.cpp  old_code.cpp  predictor.cpp  predictor.hpp  spline_AStar.cpp  spline_AStar.hpp  testSplineAStar.cpp  test_bspline_utils.cpp  test_predictor.cpp  test_utils.cpp  timer.hpp  utils.cpp  utils.hpp
faster/src/solvers/: solverGurobi.cpp  solverGurobi.hpp  solverGurobi_utils.hpp
faster/src/solvers/cvxgen/: solver_cvxgen.hpp
faster/src/solvers/nlopt/: arrow3d.m  computeDet3.m  computeDet4.m  compute_first_last_cpoints.nb  creoQueNovale.mat  evaluate_symbolic_determinant.m  example.cpp  example.txt  findWVforBezier.m  findWVforBezierDeg4.m  findWVforBezierDeg5.m  findWVforMinvo.m  finding_smallest_hull.asv  finding_smallest_hull.m  finding_smallest_hull2d.m  finding_smallest_hullPolDeg4.m  generalize_formula_paper.m  generalize_formula_paper_glop.m  generalize_formula_paper_matlab.m  generalize_formula_paper_yalmip.m  (+36 more)
faster/tests_nlopt/: CMakeLists.txt  package.xml
mader/: CMakeLists.txt  FindGUROBI.cmake  cosas_para_el_paper.txt  goal_fly  mader_fly  other.txt  package.xml  plot_cpu_usage.py  pruebas_posit_polynomials.m
mader/cmake_finders/: FindGUROBI.cmake  FindNLOPT.cmake
mader/docker/: Dockerfile
mader/include/: bspline_utils.hpp  cgal_utils.hpp  mader.hpp  mader_ros.hpp  mader_types.hpp  nlopt_utils.hpp  octopus_search.hpp  solverNlopt.hpp  solver_gurobi.hpp  solver_gurobi_utils.hpp  solver_nlopt.hpp  solver_params.hpp  spline_AStar.hpp  termcolor.hpp  timer.hpp  utils.hpp
mader/launch/: all.launch  astar.launch  ave_distance.launch  base_station.launch  base_station_send_goal.launch  collision_detector.launch  everything.launch  goal_reached.launch  hw_base_station.launch  hw_onboard.launch  hw_send_goal.launch  hw_send_goal_single.launch  individual_many_kota.launch  mader.launch  mader_general.launch  mader_general_kota.launch  mader_sample.launch  mader_specific.launch  mader_specific_and_general.launch  many_drones.launch  octopus_search.launch  onboard.launch  onboard1.launch  onboard2.launch  onboard3.launch  onboard4.launch  onboard5.launch  onboard6.launch  perfect_tracker_and_sim.launch  perfect_tracker_or_sim.launch  position_exchange.launch  random_goal.launch  scientific_systems_demo_env.launch  single_agent_simulation.launch  stuck_exam_octopus_search.launch  test_predictor.launch
mader/meshes/ConcreteDamage01b/: author.txt  model2.dae  model3.dae  model4.dae
mader/my_tests/: test_dim.m
mader/other/: compute_first_last_cpoints.nb  plot_computation_times.m  predictor.cpp  predictor.hpp  predictor_node.cpp  test_to_create_splines.m
mader/other/hw_experiments/: NX_ip_route_setup.sh  add_nx_ip_route.sh  adhoc_add_nx_ip_route.sh  decentr_gitpull.sh  decentr_goal.sh  decentr_mader_fly.sh  goal  mader_fly  mesh.sh  record_cpu.sh
mader/other/sim/: all_data_extraction.sh  ave_distance.py  ave_distance_csv2txt.py  collision_check.py  comm_delay_histogram_percentile.py  comm_delay_measure.py  comm_delay_percentile.py  completion_time.py  completion_time_graph.py  missed_msgs_count.py  multi-agent_sim.sh  muti-agent_sim.sh  other_statistics.py  sim_fly.sh  sim_goal.sh  total_dist_and_stoppage.py
mader/other/tests_matlab/: Untitled-1.nb  bspline_deboor.m  colormapline.m  mya_model1.mod  myamplmodel.mod  tests_novale.m  untitled.m
mader/other/tests_splines/: mio.m
mader/param/: mader.yaml  mader1.yaml  mader4.yaml  mader5.yaml
mader/rqt_cfgs/: demo_interface.perspective
mader/rviz_cfgs/: astar.rviz  cvx_all.rviz  mader.rviz  mader_hardware.rviz  mader_old.rviz  octopus_search.rviz  ssd_mader.rviz
mader/scripts/: ave_distance.py  base_station_send_goal.py  collision_detector.py  collision_detector_using_tf.py  compare_gurobi_and_nlopt.py  computation_time.py  dynamic_corridor.py  dynamic_forest.py  dynamic_obstacles.py  goal_reached.py  high_bay.py  hw_base_station_send_goal.py  hw_obstacle.py  individual_many_kota.py  launch_many_drones.py  mader_commands.py  perfect_controller.py  perfect_tracker.py  position_exchange.py  publish2mader_forkota.py  publish2mader_forkota_improved.py.py  publish_goals.py  random_goal.py  run_many_sims_multi_agent.py  run_many_sims_single_agent.py  scientific_systems_demo_env.py  send_goal_single.py  statistics.py
mader/src/: bspline_utils.cpp  cgal_utils.cpp  collision_detector.launch  mader.cpp  mader.hpp  mader_node.cpp  mader_ros.cpp  mader_ros.hpp  mader_types.hpp  main.cpp  monteCarlotestSplineAStar.cpp  nlopt_utils.cpp  octopus_search.cpp  predictor.cpp  predictor.hpp  predictor_node.cpp  solverNlopt.cpp  solver_gurobi.cpp  solver_gurobi_guess.cpp  solver_gurobi_utils.cpp  solver_nlopt.cpp  spline_AStar.cpp  spline_AStar.hpp  testSplineAStar.cpp  test_nlopt.cpp  timer.hpp  tmp_mader_ros.cpp  untitled.cpp  utils.cpp  utils.hpp
mader/src/examples/: testSplineAStar.cpp  test_bspline_utils.cpp  test_gurobi.cpp  test_nlopt.cpp  test_octopus_search.cpp  test_predictor.cpp  test_stuck_exam_octopus_search.cpp  test_utils.cpp
(+73 files in other folders)
