<?xml version="1.0"?>
<package>
  <name>mader</name>
  <version>0.0.0</version>
  <description>The mader package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jtorde@mit.edu">Jesus Tordesillas Torres</maintainer>
  <author email="jtorde@mit.edu">Jesus Tordesillas Torres</author> 

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
   <!--
  <build_depend>rospy</build_depend>
   -->

  <build_depend>snapstack_msgs</build_depend>
  <build_depend>mader_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>decomp_util</build_depend>
  <build_depend>decomp_ros_utils</build_depend>
  <build_depend>separator</build_depend>  
  <build_depend>jsk_rviz_plugins</build_depend> 
  
 <!--
  <build_depend>decomp_util</build_depend>
  <build_depend>decomp_ros_utils</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
